tests/fsharp/typecheck/sigs/neg142.preview.bsl

neg142.fs(47,5,47,58): optimize error FS0071: Type constraint mismatch when applying the default type 'Microsoft.FSharp.Core.obj' for a type inference variable. Type constraint mismatch. The type 
    'Microsoft.FSharp.Core.obj'    
is not compatible with type
    ''a Microsoft.FSharp.Core.option'    
 Consider adding further type constraints
